--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ env:
   - "REDMINE_LANG=en CODECLIMATE_REPO_TOKEN=f85e9c320f9a8d0d7c269f7020ebf4a3a126e8900d32458da5a05b088bb5eb02 REDMINE_VERSION=2.5.2 DATABASE_ADAPTER=postgresql"
   # - "REDMINE_LANG=en CODECLIMATE_REPO_TOKEN=f85e9c320f9a8d0d7c269f7020ebf4a3a126e8900d32458da5a05b088bb5eb02 REDMINE_VERSION=2.5.1"
   # - "REDMINE_LANG=en CODECLIMATE_REPO_TOKEN=f85e9c320f9a8d0d7c269f7020ebf4a3a126e8900d32458da5a05b088bb5eb02 REDMINE_VERSION=2.5.0"
-  - "REDMINE_LANG=en CODECLIMATE_REPO_TOKEN=f85e9c320f9a8d0d7c269f7020ebf4a3a126e8900d32458da5a05b088bb5eb02 REDMINE_VERSION=2.4.6 DATABASE_ADAPTER=mysql"
-  - "REDMINE_LANG=en CODECLIMATE_REPO_TOKEN=f85e9c320f9a8d0d7c269f7020ebf4a3a126e8900d32458da5a05b088bb5eb02 REDMINE_VERSION=2.4.6 DATABASE_ADAPTER=postgresql"
+  # - "REDMINE_LANG=en CODECLIMATE_REPO_TOKEN=f85e9c320f9a8d0d7c269f7020ebf4a3a126e8900d32458da5a05b088bb5eb02 REDMINE_VERSION=2.4.6 DATABASE_ADAPTER=mysql"
+  # - "REDMINE_LANG=en CODECLIMATE_REPO_TOKEN=f85e9c320f9a8d0d7c269f7020ebf4a3a126e8900d32458da5a05b088bb5eb02 REDMINE_VERSION=2.4.6 DATABASE_ADAPTER=postgresql"
   # - "REDMINE_LANG=en CODECLIMATE_REPO_TOKEN=f85e9c320f9a8d0d7c269f7020ebf4a3a126e8900d32458da5a05b088bb5eb02 REDMINE_VERSION=2.4.5"
   # - "REDMINE_LANG=en CODECLIMATE_REPO_TOKEN=f85e9c320f9a8d0d7c269f7020ebf4a3a126e8900d32458da5a05b088bb5eb02 REDMINE_VERSION=2.4.4"
   # - "REDMINE_LANG=en CODECLIMATE_REPO_TOKEN=f85e9c320f9a8d0d7c269f7020ebf4a3a126e8900d32458da5a05b088bb5eb02 REDMINE_VERSION=2.4.3"
