--- a/.travis.yml
+++ b/.travis.yml
@@ -10,20 +10,28 @@ branches:
     - devel
     - feat_jenkins
 env:
-  - "REDMINE_LANG=en REDMINE_VERSION=2.5.2 DATABASE_ADAPTER=mysql"
-  - "REDMINE_LANG=en REDMINE_VERSION=2.5.2 DATABASE_ADAPTER=postgresql"
-  # - "REDMINE_LANG=en REDMINE_VERSION=2.5.1"
-  # - "REDMINE_LANG=en REDMINE_VERSION=2.5.0"
-  # - "REDMINE_LANG=en REDMINE_VERSION=2.4.6 DATABASE_ADAPTER=mysql"
-  # - "REDMINE_LANG=en REDMINE_VERSION=2.4.6 DATABASE_ADAPTER=postgresql"
-  # - "REDMINE_LANG=en REDMINE_VERSION=2.4.5"
-  # - "REDMINE_LANG=en REDMINE_VERSION=2.4.4"
-  # - "REDMINE_LANG=en REDMINE_VERSION=2.4.3"
-  # - "REDMINE_LANG=en REDMINE_VERSION=2.4.2"
-  # - "REDMINE_LANG=en REDMINE_VERSION=2.4.1"
-  # - "REDMINE_LANG=en REDMINE_VERSION=2.4.0"
-  # - "REDMINE_LANG=en REDMINE_VERSION=2.3.4"
-  # - "REDMINE_LANG=en REDMINE_VERSION=2.2.4"
+  global:
+    - REDMINE_LANG=en
+    - MYSQL_DATABASE=redmine
+    - MYSQL_HOST=127.0.0.1
+    - MYSQL_PORT=3306
+    - MYSQL_USER=root
+    - MYSQL_PASSWORD=
+  matrix:
+    - REDMINE_VERSION=2.5.2 DATABASE_ADAPTER=mysql
+    - REDMINE_VERSION=2.5.2 DATABASE_ADAPTER=postgresql
+    # - "REDMINE_LANG=en REDMINE_VERSION=2.5.1"
+    # - "REDMINE_LANG=en REDMINE_VERSION=2.5.0"
+    # - "REDMINE_LANG=en REDMINE_VERSION=2.4.6 DATABASE_ADAPTER=mysql"
+    # - "REDMINE_LANG=en REDMINE_VERSION=2.4.6 DATABASE_ADAPTER=postgresql"
+    # - "REDMINE_LANG=en REDMINE_VERSION=2.4.5"
+    # - "REDMINE_LANG=en REDMINE_VERSION=2.4.4"
+    # - "REDMINE_LANG=en REDMINE_VERSION=2.4.3"
+    # - "REDMINE_LANG=en REDMINE_VERSION=2.4.2"
+    # - "REDMINE_LANG=en REDMINE_VERSION=2.4.1"
+    # - "REDMINE_LANG=en REDMINE_VERSION=2.4.0"
+    # - "REDMINE_LANG=en REDMINE_VERSION=2.3.4"
+    # - "REDMINE_LANG=en REDMINE_VERSION=2.2.4"
 before_install:
   - cd ../..
   - ./jbox-web/redmine_jenkins/contrib/travis/install_redmine.sh
@@ -33,7 +41,7 @@ before_install:
 before_script:
   - echo $(pwd)
   - mysql -e 'create database redmine;'
-  - mysql -e 'create database redmine_test;'
+  # - mysql -e 'create database redmine_test;'
   - psql -c 'create database redmine;' -U postgres
   - psql -c 'create database redmine_test;' -U postgres
   - bundle exec rake generate_secret_token
@@ -42,5 +50,4 @@ before_script:
   - bundle exec rake redmine:plugins:migrate
   - bundle exec rake db:test:prepare
 script:
-  # - bundle exec rake redmine_jenkins:test
-  - bundle exec rspec plugins/redmine_jenkins/spec/
+  - bundle exec rake redmine_jenkins:ci:all
