--- a/spec/database_mysql.yml
+++ b/spec/database_mysql.yml
@@ -1,3 +1,6 @@
+## MySQL configuration example
+## Data come from environment variables so the test suite can be run
+## on Travis or Jenkins (see https://github.com/codevise/jenkins-mysql-job-databases-plugin)
 production:
   adapter: mysql2
   database: <%= ENV['MYSQL_DATABASE'] %>
