--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,8 @@ env:
     - MYSQL_PORT=3306
     - MYSQL_USER=root
     - MYSQL_PASSWORD=
+    - POSTGRES_DATABASE=redmine
+    - POSTGRES_USER=postgres
   matrix:
     - REDMINE_VERSION=3.0.0 DATABASE_ADAPTER=mysql
     - REDMINE_VERSION=3.0.0 DATABASE_ADAPTER=postgresql
